boom/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: boom
  selfLink: /api/v1/namespaces/default/services/boom
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: boom
  sessionAffinity: None
  type: NodePort
