boom/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boom
spec:
  backend:
    serviceName: boom
    servicePort: 8080
